fix(pom.xml): add exports line to surefire plugin